plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.create'
version = '0.0.1-SNAPSHOT'
description = 'chachacreate'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // QueryDSL
    implementation "com.querydsl:querydsl-jpa:5.1.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"

    // https://mvnrepository.com/artifact/org.modelmapper/modelmapper
    // Entity <-> DTO, VO
    implementation 'org.modelmapper:modelmapper:3.2.4'

    // https://mvnrepository.com/artifact/net.coobird/thumbnailator
    // 섬네일 제작
    implementation 'net.coobird:thumbnailator:0.4.13'

    // https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter
    // jasypt 암호화
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

    // JWT 토큰
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // https://mvnrepository.com/artifact/io.github.cdimascio/dotenv-java
    // env 파일 해석
    implementation 'io.github.cdimascio:dotenv-java:3.2.0'


    // https://mvnrepository.com/artifact/software.amazon.awssdk/s3
    // aws s3
    implementation 'software.amazon.awssdk:s3:2.32.25'
    
    // Webp 변환
    // https://mvnrepository.com/artifact/org.sejda.imageio/webp-imageio
    implementation 'org.sejda.imageio:webp-imageio:0.1.6'

    // Swagger 설정
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // Gson
    implementation 'com.google.code.gson:gson:2.10.1'

    // 이메일 인증
    implementation 'javax.mail:mail:1.4.7'

    // json simple 사용
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    // Get BOM file and choose Oracle JDBC driver (ojdbc8.jar) and Universal Connection Pool (ucp.jar)
    implementation(enforcedPlatform("com.oracle.database.jdbc:ojdbc-bom:21.1.0.0"))
    implementation("com.oracle.database.jdbc:ojdbc8")
    implementation("com.oracle.database.jdbc:ucp")

    // Additional Jars for using Oracle Wallets
    implementation("com.oracle.database.security:oraclepki")
    implementation("com.oracle.database.security:osdt_core")
    implementation("com.oracle.database.security:osdt_cert")
}

sourceSets {
    main {
        java {
            srcDirs += 'build/generated/sources/annotationProcessor/java/main'
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
